--- a/src/templates/items/weapon/weapon.hbs
+++ b/src/templates/items/weapon/weapon.hbs
@@ -17,15 +17,19 @@
     {{#> "systems/animabf/templates/common/ui/group-body.hbs"
       class="weapon-item-dialog"
     }}
-      {{> 'systems/animabf/templates/common/domain/weapon/select-critic.hbs'
+      {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
         class="critic-primary"
+        isVertical=true
+        choices=config.iterables.combat.weapon.criticTypes
         title=(localize "anima.ui.combat.weapons.critic.primary.title")
         inputName=(concat "data.critic.primary.value")
         inputValue=data.data.critic.primary.value
       }}
       {{#if (or (is 'eq' data.data.isRanged.value false) (is 'eq' data.data.shotType.value 'throw'))}}
-        {{> 'systems/animabf/templates/common/domain/weapon/select-critic.hbs'
+        {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
           class="critic-secondary"
+          isVertical=true
+          choices=config.iterables.combat.weapon.criticTypes
           title=(localize "anima.ui.combat.weapons.critic.secondary.title")
           inputName=(concat "data.critic.secondary.value")
           inputValue=data.data.critic.secondary.value
