--- a/src/scss/items/items-sheet.scss
+++ b/src/scss/items/items-sheet.scss
@@ -1,5 +1,6 @@
 @import './base/main.scss';
 
 @import './weapon/weapon.scss';
+@import './ammo/ammo.scss';
 @import './armor/armor.scss';
 @import './spell/spell.scss';
