--- a/src/templates/actor/parts/combat/parts/ammo.hbs
+++ b/src/templates/actor/parts/combat/parts/ammo.hbs
@@ -21,6 +21,16 @@
           inputValue=this.name
         }}
         {{>
+        'systems/animabf/templates/common/ui/custom-select-choices.hbs'
+          class="critic"
+          choices=../config.iterables.combat.weapon.criticTypes
+          isVertical=true
+          title=(localize "anima.ui.combat.ammo.critic.title")
+          hideTitle=(is "gt" @index 0)
+          inputName=(concat "data.dynamic.ammo." this._id ".data.critic.value")
+          inputValue=this.data.critic.value
+        }}
+        {{>
         "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
           class="amount"
           title=(localize "anima.ui.combat.ammo.amount.title")
