feat: link ranged weapons with ammos

--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -114,6 +114,16 @@
                 inputName=(concat "data.dynamic.weapons." this._id ".data.range.final.value")
                 inputValue=this.data.range.final.value
               }}
+            {{log this.data.ammoId}}
+              {{>
+              'systems/animabf/templates/common/domain/weapon/select-ammo.hbs'
+                class="ammo"
+                isVertical=true
+                title=(localize "anima.ui.combat.weapons.ammo.title")
+                ammo=../../../this.data.data.combat.ammo
+                inputName=(concat "data.dynamic.weapons." this._id ".data.ammoId")
+                inputValue=this.data.ammoId
+              }}
             {{/if}}
           {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
         {{/"systems/animabf/templates/common/ui/group.hbs"}}
