feat: add weapon automatism

--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -84,6 +84,9 @@
         .attack,
         .block,
         .damage,
+        .integrity,
+        .breaking,
+        .presence,
         .initiative,
         .fue-required,
         .quality {
