--- a/src/templates/actor/parts/combat/parts/ammo.hbs
+++ b/src/templates/actor/parts/combat/parts/ammo.hbs
@@ -35,7 +35,7 @@
           class="amount"
           title=(localize "anima.ui.combat.ammo.amount.title")
           hideTitle=(is "gt" @index 0)
-          inputName=(concat "data.dynamic.ammo." this._id ".data.amount")
+          inputName=(concat "data.dynamic.ammo." this._id ".data.amount.value")
           inputValue=this.data.amount.value
         }}
       </div>
