--- a/src/templates/common/ui/custom-select-choices.hbs
+++ b/src/templates/common/ui/custom-select-choices.hbs
@@ -1,4 +1,5 @@
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+  disabled=this.disabled
   class=this.class
   title=this.title
   inputName=this.inputName
