--- a/src/templates/items/ammo/ammo.hbs
+++ b/src/templates/items/ammo/ammo.hbs
@@ -28,30 +28,30 @@
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="presence"
-        title=(localize "anima.ui.combat.ammo.presence.title")
-        inputName=(concat "data.presence.value")
-        inputValue=data.data.presence.value
+        title=(localize "anima.ui.combat.ammo.presence.base.title")
+        inputName=(concat "data.presence.base.value")
+        inputValue=data.data.presence.base.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="integrity"
-        title=(localize "anima.ui.combat.ammo.integrity.title")
-        inputName=(concat "data.integrity.value")
-        inputValue=data.data.integrity.value
+        title=(localize "anima.ui.combat.ammo.integrity.base.title")
+        inputName=(concat "data.integrity.base.value")
+        inputValue=data.data.integrity.base.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="breaking"
-        title=(localize "anima.ui.combat.ammo.breaking.title")
-        inputName=(concat "data.breaking.value")
-        inputValue=data.data.breaking.value
+        title=(localize "anima.ui.combat.ammo.breaking.base.title")
+        inputName=(concat "data.breaking.base.value")
+        inputValue=data.data.breaking.base.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="damage"
-        title=(localize "anima.ui.combat.ammo.damage.title")
-        inputName=(concat "data.damage.value")
-        inputValue=data.data.damage.value
+        title=(localize "anima.ui.combat.ammo.damage.base.title")
+        inputName=(concat "data.damage.base.value")
+        inputValue=data.data.damage.base.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
