--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -3,11 +3,19 @@
 .combat {
   .first-row {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr;
+    grid-column-gap: 1rem;
+  }
+
+  .second-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
   }
 
   .combat-special-skills {
+    margin-top: 0.5rem;
+
     .input {
       @include input;
     }
@@ -22,6 +30,8 @@
   }
 
   .combat-tables {
+    margin-top: 0.5rem;
+
     .input {
       @include input;
     }
@@ -44,11 +54,12 @@
 
       .name {
         .input-container {
-          width: 100%;
+          min-width: 10rem;
         }
       }
 
       display: flex;
+      justify-content: space-between;
     }
   }
 
